:zap: enhanced AOP with AspectJ